--- a/html/driver/driver.html
+++ b/html/driver/driver.html
@@ -82,9 +82,9 @@
     	</div>
     </aside>
 
-    <main class="float-end align-items-center">
+    <main class="float-end d-flex align-items-center flex-column">
 
-        <div class="col-12 p-4" style="margin-top:20px">
+        <div class="p-4 text-center" style="margin-top:20px">
             <h3 class="p-2">Charles Leclerc</h3>
             <ul class="list-group list-group-horizontal col-10 mx-3">
                 <li class="list-group-item"><h6>Nationality:</h6><p>Monaco</p></li>
@@ -93,31 +93,54 @@
             </ul>
         </div>
 
-        <div class="col-10 p-4">
-            <h4>Contracts</h4>
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">Sign year</th>
-                    <th scope="col">Expiration year</th>
-                    <th scope="col">Team</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>2018</td>
-                    <td>2019</td>
-                    <td><a href="#">Sauber</a></td>
-                  </tr>
-                  <tr>
-                    <td>2019</td>
-                    <td>2026</td>
-                    <td><a href="#">Ferrari</a></td>
-                  </tr>
-                </tbody>
-              </table>
+		<div class="d-flex border-top" style="height: 50%;">
+			<div class="tableDiv my-4 mx-4">
+				<h4>Contracts</h4>
+				<table class="table">
+					<thead>
+					<tr>
+						<th scope="col">Sign year</th>
+						<th scope="col">Expiration year</th>
+						<th scope="col">Team</th>
+					</tr>
+					</thead>
+					<tbody>
+					<tr>
+						<td>2018</td>
+						<td>2019</td>
+						<td><a href="#">Sauber</a></td>
+					</tr>
+					<tr>
+						<td>2019</td>
+						<td>2026</td>
+						<td><a href="#">Ferrari</a></td>
+					</tr>
+					</tbody>
+				</table>
+			</div>
 
-        </div>
+			<div class="tableDiv my-4 mx-4">
+				<h4>Race results</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Race</th>
+                            <th scope="col">Season</th>
+                            <th scope="col">Round</th>
+							<th scope="col">Position</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+							<td>Barhain International Circuit</td>
+							<td>2024</td>
+							<td>1</td>
+							<td>1</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+		</div>
     </main>
     
 </body>
