--- a/html/race/listRace.html
+++ b/html/race/listRace.html
@@ -94,18 +94,63 @@
                         <th scope="col">Round</th>
                         <th scope="col">Track</th>
                         <th scope="col">Race type</th>
+						<th scope="col">Standing</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="align-middle">
                         <td>2024</td>
                         <td>1</td>
                         <td>Losail International Circuit</td>
                         <td>Normal</td>
+						<td>
+							<!-- Button trigger modal -->
+							<button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#standingModal">
+								Standing
+							</button>
+						</td>
                     </tr>
                 </tbody>
             </table>
         </div>
+
+	    <!-- Modal -->
+		<div class="modal fade" id="standingModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+			<div class="modal-dialog">
+			    <div class="modal-content">
+					<div class="modal-header">
+				  		<h1 class="modal-title fs-5" id="staticBackdropLabel">Standing</h1>
+				  		<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+				  		<table class="table">
+							<thead>
+								<th scope="col">Position</th>
+								<th scope="col">Driver</th>
+								<th scope="col">Points</th>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>Max Verstappen</td>
+									<td>20</td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>Charles Leclerc</td>
+									<td>18</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<div class="modal-footer">
+				  		<button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+  
+
     </main>
     
 </body>
