--- a/html/driver/driver.html
+++ b/html/driver/driver.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>Driver</title>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<title>Driver</title>
 </head>
 <body>
 
@@ -82,7 +83,7 @@
     	</div>
     </aside>
 
-    <main class="float-end d-flex align-items-center flex-column">
+    <main class="float-end d-flex align-items-center flex-column overflow-auto">
 
         <div class="p-4 text-center" style="margin-top:20px">
             <h3 class="p-2">Charles Leclerc</h3>
@@ -141,7 +142,10 @@
                 </table>
             </div>
 		</div>
+		<div class="w-75">
+			<canvas id="driverChart"></canvas>
+		</div>
     </main>
-    
+    <script src="script.js"></script>
 </body>
 </html>
